# reservation

./: .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: mod.rs  reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_query.rs  reservation_status.rs
migrations/: 20250611133209_init.down.sql  20250611133209_init.up.sql  20250611140142_reservation.down.sql  20250611140142_reservation.up.sql  20250611140550_reservation_trigger.down.sql  20250611140550_reservation_trigger.up.sql  20250611140906_reservation_func.down.sql  20250611140906_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md  brew-tools.md  libs.md  template.md
service/: Cargo.toml
service/src/: main.rs
src/: main.rs
