[package]
name = "abi"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
prost = "0.13.5"
prost-types = "0.13.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
