[package]
name = "reservation"
license = "MIT"
version = "0.1.0"
edition = "2024"


[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "2.0.12"
